patches-lsp/src/workspace/tests/snapshots/patches_lsp__workspace__tests__hover__included_template_use_expansion.snap
---
source: patches-lsp/src/workspace/tests/hover.rs
expression: snapshot_hover(&h)
---
range: Some(Range { start: Position { line: 2, character: 11 }, end: Position { line: 2, character: 20 } })
---
**expansion** — 1 modules

**In:**
- `gate` (unwired)

**Out:**
- `audio` ← `osc.sine`

**Modules:**
- `v/osc` : `Osc`
