patches-lsp/src/workspace/tests/snapshots/patches_lsp__workspace__tests__hover__template_body_resolves_channels.snap
---
source: patches-lsp/src/workspace/tests/hover.rs
expression: snapshot_hover(&h)
---
range: Some(Range { start: Position { line: 4, character: 7 }, end: Position { line: 4, character: 16 } })
---
**v/mix** : `Sum`

_shape:_ channels = 3

**Inputs:**
- `in[0..2]` (mono)

**Outputs:**
- `out` (mono)
