patches-lsp/src/workspace/tests/snapshots/patches_lsp__workspace__tests__hover__template_use_port_wiring.snap
---
source: patches-lsp/src/workspace/tests/hover.rs
expression: snapshot_hover(&h)
---
range: Some(Range { start: Position { line: 11, character: 7 }, end: Position { line: 11, character: 16 } })
---
**expansion** — 2 modules

**In:**
- `voct` → `osc.voct`
- `gate` → `env.gate`

**Out:**
- `audio` ← `osc.sine`

**Modules:**
- `v/env` : `Env`
- `v/osc` : `Osc`

**Types:**
- `Env` × 1
- `Osc` × 1
