patches-lsp/src/workspace/tests/snapshots/patches_lsp__workspace__tests__hover__top_level_fanout.snap
---
source: patches-lsp/src/workspace/tests/hover.rs
expression: snapshot_hover(&h)
---
range: Some(Range { start: Position { line: 4, character: 0 }, end: Position { line: 4, character: 37 } })
---
**connection** — fan-out × 2

- `osc.sine` → `out.in_left`
- `osc.sine` → `out.in_right`
